--- a/moveapp/src/main/resources/templates/index.html
+++ b/moveapp/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
       <a href="/estimate">Estimate</a>
       <a href="/quote">Get Quote</a>
       <a href="/services">Services</a>
-      <a href="/contact" class="cta-btn">Contact</a>
+    <a href="tel:+18000003000" class="cta-btn">Call Us: +1 800 000 3000</a>
     </nav>
   </header>
 
